# avernus

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
scripts/: run.py
src/: main.cpp
src/engine/: app.hpp  engine.cpp  engine.hpp  graphics.hpp  module.hpp
src/game/: game.cpp  game.hpp  input.cpp  input.hpp
